fixed navBar li on mobile screen

--- a/my-app/src/Components/Home/Navbar.css
+++ b/my-app/src/Components/Home/Navbar.css
@@ -88,4 +88,8 @@
   .details-container{
     width: 100% !important;
   }
+  .ul-sign li{
+    padding: 5px;
+    font-size: 13px;
+  }
 }
